# lib_timer

./: CMakeLists.txt  lib_timer.c  lib_timer.h  lib_timer_STM32.c  lib_timer_init_itf.h  lib_timer_types.h
include/: lib_timer.h  lib_timer_types.h
src/: CMakeLists.txt
src/posix/: CMakeLists.txt  lib_timer_POSIX.c
src/posix/include/: lib_timer_init_POSIX.h
src/stm32/: CMakeLists.txt  lib_timer_STM32.c
src/stm32/include/: lib_timer_init_STM32.h
